# acidvis

./: .gitignore  CMakeLists.txt  README.md  embed_file.cmake
examples/: cubic_swap.json  quadratic_swap.json  roots_morph.json  rotate_triangle.json
inc/: animation.h  app.h  cloud.h  combination.h  companion.h  compat_complex.h  input.h  lapacksolve.h  polynomial.h  polysolve.h  render.h  render_internal.h  ui.h  util.h
src/: animation.c  app.c  cloud.c  combination.c  companion.c  input.c  lapacksolve.c  main.c  polynomial.c  polysolve.c  render.c  render.cl  render_cpu.c  render_gpu.c  ui.c  util.c
tests/: polymp.c  polytest.c  throughput.c
